@@ -1,5 +1,6 @@
 Changes for 1.0.0
 
+ - [NTD-98] fixed regular expression tester giving wrong result for "Character string not included" expressions (Vedmak)
  - [NTP-200] fixed sending active items multiple times because of zbx_tcp_recv() timeout (asaveljevs,Sasha)
  - [NTP-194] fixed compilation under Solaris and FreeBSD (Sasha)
  - [NTD-95] fixed macro expansion in item names in notification messages (asaveljevs)
